syntax = "proto3";

package com.otus.grpc;

option java_multiple_files = true;

service ProductInfo {
  rpc createUser(User) returns (UserID);
  rpc changeUserEmail(User) returns (User);
  rpc changeUserName(User) returns (User);
  rpc createProduct(Product) returns (ProductID);
  rpc addProductToCart(Card) returns (Card);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
}
message UserID {
  string value = 1;
}

message Product {
  string id = 1;
  string name = 2;
}

message ProductID {
  string value = 1;
}

message Card {
  string userId = 1;
  string productId = 2;
}
